MAINTAINERCLEANFILES	= Makefile.in

# install
bashcompletiondir	= $(prefix)/share/bash-completion/completions/
dist_bashcompletion_DATA= bash_completion/pcs

snmpmibsdir		= $(SNMP_MIB_DIR)
dist_snmpmibs_DATA	= snmp/mibs/PCMK-PCS-MIB.txt \
			  snmp/mibs/PCMK-PCS-V1-MIB.txt

man8_MANS		= pcs.8 snmp/pcs_snmp_agent.8

sysconfigdir		= $(CONF_DIR)
dist_sysconfig_DATA	= snmp/conf/pcs_snmp_agent

servicedir		= $(SYSTEMD_UNIT_DIR)
service_DATA		= snmp/pcs_snmp_agent.service

EXTRA_DIST		= \
			  acl.py \
			  alert.py \
			  app.py \
			  cli/booth/command.py \
			  cli/booth/env.py \
			  cli/booth/__init__.py \
			  cli/cluster/__init__.py \
			  cli/cluster/command.py \
			  cli/cluster_property/__init__.py \
			  cli/cluster_property/command.py \
			  cli/cluster_property/output.py \
			  cli/common/completion.py \
			  cli/common/env_cli.py \
			  cli/common/errors.py \
			  cli/common/__init__.py \
			  cli/common/lib_wrapper.py \
			  cli/common/middleware.py \
			  cli/common/parse_args.py \
			  cli/common/printable_tree.py \
			  cli/common/routing.py \
			  cli/common/tools.py \
			  cli/common/output.py \
			  cli/constraint_colocation/command.py \
			  cli/constraint_colocation/__init__.py \
			  cli/constraint/command.py \
			  cli/constraint/location/__init__.py \
			  cli/constraint/location/command.py \
			  cli/constraint/output/__init__.py \
			  cli/constraint/output/all.py \
			  cli/constraint/output/colocation.py \
			  cli/constraint/output/location.py \
			  cli/constraint/output/order.py \
			  cli/constraint/output/set.py \
			  cli/constraint/output/ticket.py \
			  cli/constraint/rule/__init__.py \
			  cli/constraint/rule/command.py \
			  cli/constraint/__init__.py \
			  cli/constraint_order/command.py \
			  cli/constraint_order/__init__.py \
			  cli/constraint/parse_args.py \
			  cli/constraint_ticket/command.py \
			  cli/constraint_ticket/__init__.py \
			  cli/constraint_ticket/parse_args.py \
			  cli/dr.py \
			  client.py \
			  cli/fencing_topology.py \
			  cli/file/__init__.py \
			  cli/file/metadata.py \
			  cli/__init__.py \
			  cli/nvset.py \
			  cli/query/__init__.py \
			  cli/query/resource.py \
			  cli/reports/__init__.py \
			  cli/reports/messages.py \
			  cli/reports/output.py \
			  cli/reports/preprocessor.py \
			  cli/reports/processor.py \
			  cli/resource/__init__.py \
			  cli/resource/parse_args.py \
			  cli/resource/output.py \
			  cli/resource/relations.py \
			  cli/resource_agent.py \
			  cli/routing/acl.py \
			  cli/routing/alert.py \
			  cli/routing/booth.py \
			  cli/routing/client.py \
			  cli/routing/cluster.py \
			  cli/routing/config.py \
			  cli/routing/constraint.py \
			  cli/routing/dr.py \
			  cli/routing/host.py \
			  cli/routing/__init__.py \
			  cli/routing/node.py \
			  cli/routing/pcsd.py \
			  cli/routing/prop.py \
			  cli/routing/qdevice.py \
			  cli/routing/quorum.py \
			  cli/routing/resource.py \
			  cli/routing/resource_stonith_common.py \
			  cli/routing/status.py \
			  cli/routing/stonith.py \
			  cli/routing/tag.py \
			  cli/rule.py \
			  cli/status/command.py \
			  cli/status/__init__.py \
			  cli/tag/command.py \
			  cli/tag/__init__.py \
			  cluster.py \
			  common/corosync_conf.py \
			  common/const.py \
			  common/dr.py \
			  common/fencing_topology.py \
			  common/file.py \
			  common/file_type_codes.py \
			  common/host.py \
			  common/__init__.py \
			  common/async_tasks/__init__.py \
			  common/async_tasks/dto.py \
			  common/async_tasks/types.py \
			  common/capabilities.py \
			  common/communication/__init__.py \
			  common/communication/const.py \
			  common/communication/dto.py \
			  common/communication/types.py \
			  common/interface/dto.py \
			  common/interface/__init__.py \
			  common/node_communicator.py \
			  common/pacemaker/__init__.py \
			  common/pacemaker/cluster_property.py \
			  common/pacemaker/constraint/__init__.py \
			  common/pacemaker/constraint/all.py \
			  common/pacemaker/constraint/colocation.py \
			  common/pacemaker/constraint/location.py \
			  common/pacemaker/constraint/order.py \
			  common/pacemaker/constraint/set.py \
			  common/pacemaker/constraint/ticket.py \
			  common/pacemaker/defaults.py \
			  common/pacemaker/nvset.py \
			  common/pacemaker/resource/__init__.py \
			  common/pacemaker/resource/bundle.py \
			  common/pacemaker/resource/clone.py \
			  common/pacemaker/resource/group.py \
			  common/pacemaker/resource/list.py \
			  common/pacemaker/resource/operations.py \
			  common/pacemaker/resource/primitive.py \
			  common/pacemaker/resource/relations.py \
			  common/pacemaker/role.py \
			  common/pacemaker/rule.py \
			  common/pacemaker/tools.py \
			  common/pacemaker/types.py \
			  common/permissions/__init__.py \
			  common/permissions/types.py \
			  common/pcs_pycurl.py \
			  common/reports/codes.py \
			  common/reports/const.py \
			  common/reports/conversions.py \
			  common/reports/deprecated_codes.py \
			  common/reports/dto.py \
			  common/reports/__init__.py \
			  common/reports/item.py \
			  common/reports/messages.py \
			  common/reports/processor.py \
			  common/reports/types.py \
			  common/resource_agent/__init__.py \
			  common/resource_agent/const.py \
			  common/resource_agent/dto.py \
			  common/services/common.py \
			  common/services/drivers/__init__.py \
			  common/services/drivers/systemd.py \
			  common/services/drivers/sysvinit_rhel.py \
			  common/services_dto.py \
			  common/services/errors.py \
			  common/services/__init__.py \
			  common/services/interfaces/executor.py \
			  common/services/interfaces/__init__.py \
			  common/services/interfaces/manager.py \
			  common/services/types.py \
			  common/ssl.py \
			  common/str_tools.py \
			  common/tools.py \
			  common/types.py \
			  common/validate.py \
			  common/status_dto.py \
			  common/resource_status.py \
			  config.py \
			  constraint.py \
			  daemon/app/common.py \
			  daemon/app/__init__.py \
			  daemon/app/api_v0.py \
			  daemon/app/api_v1.py \
			  daemon/app/api_v2.py \
			  daemon/app/auth.py \
			  daemon/app/capabilities.py \
			  daemon/app/sinatra_common.py \
			  daemon/app/sinatra_remote.py \
			  daemon/app/sinatra_ui.py \
			  daemon/app/ui_common.py \
			  daemon/app/webui/__init__.py \
			  daemon/app/webui/auth.py \
			  daemon/app/webui/core.py \
			  daemon/app/webui/session.py \
			  daemon/app/webui/sinatra_ui.py \
			  daemon/async_tasks/__init__.py \
			  daemon/async_tasks/scheduler.py \
			  daemon/async_tasks/task.py \
			  daemon/async_tasks/types.py \
			  daemon/async_tasks/worker/command_mapping.py \
			  daemon/async_tasks/worker/communicator.py \
			  daemon/async_tasks/worker/executor.py \
			  daemon/async_tasks/worker/__init__.py \
			  daemon/async_tasks/worker/logging.py \
			  daemon/async_tasks/worker/report_processor.py \
			  daemon/async_tasks/worker/types.py \
			  daemon/env.py \
			  daemon/http_server.py \
			  daemon/__init__.py \
			  daemon/log.py \
			  daemon/ruby_pcsd.py \
			  daemon/run.py \
			  daemon/ssl.py \
			  daemon/systemd.py \
			  entry_points/cli.py \
			  entry_points/common.py \
			  entry_points/daemon.py \
			  entry_points/__init__.py \
			  entry_points/internal.py \
			  entry_points/snmp_agent.py \
			  host.py \
			  __init__.py \
			  lib/auth/config/__init__.py \
			  lib/auth/config/exporter.py \
			  lib/auth/config/facade.py \
			  lib/auth/config/parser.py \
			  lib/auth/config/types.py \
			  lib/auth/__init__.py \
			  lib/auth/const.py \
			  lib/auth/pam.py \
			  lib/auth/provider.py \
			  lib/auth/tools.py \
			  lib/auth/types.py \
			  lib/booth/config_facade.py \
			  lib/booth/config_files.py \
			  lib/booth/config_parser.py \
			  lib/booth/config_validators.py \
			  lib/booth/constants.py \
			  lib/booth/env.py \
			  lib/booth/__init__.py \
			  lib/booth/resource.py \
			  lib/booth/status.py \
			  lib/booth/sync.py \
			  lib/cib/acl.py \
			  lib/cib/alert.py \
			  lib/cib/const.py \
			  lib/cib/constraint/colocation.py \
			  lib/cib/constraint/common.py \
			  lib/cib/constraint/constraint.py \
			  lib/cib/constraint/location.py \
			  lib/cib/constraint/__init__.py \
			  lib/cib/constraint/order.py \
			  lib/cib/constraint/resource_set.py \
			  lib/cib/constraint/ticket.py \
			  lib/cib/fencing_topology.py \
			  lib/cib/__init__.py \
			  lib/cib/node.py \
			  lib/cib/nvpair_multi.py \
			  lib/cib/nvpair.py \
			  lib/cib/resource/agent.py \
			  lib/cib/resource/bundle.py \
			  lib/cib/resource/clone.py \
			  lib/cib/resource/common.py \
			  lib/cib/resource/const.py \
			  lib/cib/resource/group.py \
			  lib/cib/resource/guest_node.py \
			  lib/cib/resource/hierarchy.py \
			  lib/cib/resource/__init__.py \
			  lib/cib/resource/operations.py \
			  lib/cib/resource/primitive.py \
			  lib/cib/resource/relations.py \
			  lib/cib/resource/remote_node.py \
			  lib/cib/resource/stonith.py \
			  lib/cib/resource/types.py \
			  lib/cib/resource/validations.py \
			  lib/cib/rule/cib_to_dto.py \
			  lib/cib/rule/cib_to_str.py \
			  lib/cib/rule/compat_pyparsing.py \
			  lib/cib/rule/expression_part.py \
			  lib/cib/rule/in_effect.py \
			  lib/cib/rule/__init__.py \
			  lib/cib/rule/parsed_to_cib.py \
			  lib/cib/rule/parser.py \
			  lib/cib/rule/tools.py \
			  lib/cib/rule/validator.py \
			  lib/cib/sections.py \
			  lib/cib/status.py \
			  lib/cib/tag.py \
			  lib/cib/tools.py \
			  lib/cluster_property.py \
			  lib/commands/acl.py \
			  lib/commands/alert.py \
			  lib/commands/booth.py \
			  lib/commands/cib.py \
			  lib/commands/cib_options.py \
			  lib/commands/cluster.py \
			  lib/commands/cluster_property.py \
			  lib/commands/constraint/colocation.py \
			  lib/commands/constraint/common.py \
			  lib/commands/constraint/__init__.py \
			  lib/commands/constraint/location.py \
			  lib/commands/constraint/order.py \
			  lib/commands/constraint/ticket.py \
			  lib/commands/dr.py \
			  lib/commands/fencing_topology.py \
			  lib/commands/__init__.py \
			  lib/commands/node.py \
			  lib/commands/pcsd.py \
			  lib/commands/qdevice.py \
			  lib/commands/quorum.py \
			  lib/commands/remote_node.py \
			  lib/commands/resource_agent.py \
			  lib/commands/resource.py \
			  lib/commands/sbd.py \
			  lib/commands/scsi.py \
			  lib/commands/services.py \
			  lib/commands/status.py \
			  lib/commands/stonith_agent.py \
			  lib/commands/stonith.py \
			  lib/commands/tag.py \
			  lib/communication/booth.py \
			  lib/communication/cluster.py \
			  lib/communication/corosync.py \
			  lib/communication/__init__.py \
			  lib/communication/nodes.py \
			  lib/communication/qdevice_net.py \
			  lib/communication/qdevice.py \
			  lib/communication/sbd.py \
			  lib/communication/scsi.py \
			  lib/communication/status.py \
			  lib/communication/tools.py \
			  lib/corosync/config_facade.py \
			  lib/corosync/config_parser.py \
			  lib/corosync/config_validators.py \
			  lib/corosync/constants.py \
			  lib/corosync/__init__.py \
			  lib/corosync/live.py \
			  lib/corosync/node.py \
			  lib/corosync/qdevice_client.py \
			  lib/corosync/qdevice_net.py \
			  lib/dr/config/facade.py \
			  lib/dr/config/__init__.py \
			  lib/dr/env.py \
			  lib/dr/__init__.py \
			  lib/env.py \
			  lib/errors.py \
			  lib/exchange_formats.md \
			  lib/external.py \
			  lib/file/__init__.py \
			  lib/file/instance.py \
			  lib/file/json.py \
			  lib/file/metadata.py \
			  lib/file/raw_file.py \
			  lib/file/toolbox.py \
			  lib/__init__.py \
			  lib/interface/config.py \
			  lib/interface/__init__.py \
			  lib/node_communication_format.py \
			  lib/node_communication.py \
			  lib/node.py \
			  lib/pacemaker/api_result.py \
			  lib/pacemaker/__init__.py \
			  lib/pacemaker/live.py \
			  lib/pacemaker/simulate.py \
			  lib/pacemaker/state.py \
			  lib/pacemaker/status.py \
			  lib/pacemaker/values.py \
			  lib/permissions/__init__.py \
			  lib/permissions/checker.py \
			  lib/permissions/config/__init__.py \
			  lib/permissions/config/exporter.py \
			  lib/permissions/config/facade.py \
			  lib/permissions/config/parser.py \
			  lib/permissions/config/types.py \
			  lib/resource_agent/const.py \
			  lib/resource_agent/error.py \
			  lib/resource_agent/facade.py \
			  lib/resource_agent/__init__.py \
			  lib/resource_agent/list.py \
			  lib/resource_agent/name.py \
			  lib/resource_agent/ocf_transform.py \
			  lib/resource_agent/pcs_transform.py \
			  lib/resource_agent/types.py \
			  lib/resource_agent/xml.py \
			  lib/sbd.py \
			  lib/services.py \
			  lib/tools.py \
			  lib/validate.py \
			  lib/xml_tools.py \
			  node.py \
			  pcsd.py \
			  pcs_internal.py \
			  py.typed \
			  qdevice.py \
			  quorum.py \
			  resource.py \
			  snmp/agentx/__init__.py \
			  snmp/agentx/types.py \
			  snmp/agentx/updater.py \
			  snmp/conf/pcs_snmp_agent \
			  snmp/__init__.py \
			  snmp/mibs/PCMK-PCS-MIB.txt \
			  snmp/mibs/PCMK-PCS-V1-MIB.txt \
			  snmp/pcs_snmp_agent.8 \
			  snmp/pcs_snmp_agent.py \
			  snmp/updaters/__init__.py \
			  snmp/updaters/v1.py \
			  status.py \
			  stonith.py \
			  usage.py \
			  utils.py
