MAINTAINERCLEANFILES	= Makefile.in

EXTRA_DIST		= \
			  tier0/test_host.py \
			  tier0/daemon/test_ssl.py \
			  tier0/daemon/test_env.py \
			  tier0/daemon/app/test_app_redirect.py \
			  tier0/daemon/app/test_app_spa.py \
			  tier0/daemon/app/test_app_session.py \
			  tier0/daemon/app/fixtures_app.py \
			  tier0/daemon/app/test_app_remote.py \
			  tier0/daemon/app/test_app_gui.py \
			  tier0/daemon/app/__init__.py \
			  tier0/daemon/test_ruby_pcsd.py \
			  tier0/daemon/test_auth.py \
			  tier0/daemon/test_http_server.py \
			  tier0/daemon/test_session.py \
			  tier0/daemon/__init__.py \
			  tier0/common/test_host.py \
			  tier0/common/test_tools.py \
			  tier0/common/test_str_tools.py \
			  tier0/common/test_file.py \
			  tier0/common/reports/constraints/test_ticket.py \
			  tier0/common/reports/constraints/test_common.py \
			  tier0/common/reports/constraints/__init__.py \
			  tier0/common/reports/constraints/test_init.py \
			  tier0/common/reports/test_messages.py \
			  tier0/common/reports/test_item.py \
			  tier0/common/reports/__init__.py \
			  tier0/common/test_node_communicator.py \
			  tier0/common/interface/test_dto.py \
			  tier0/common/interface/__init__.py \
			  tier0/common/test_tools_xml_fromstring.py \
			  tier0/common/__init__.py \
			  tier0/lib/test_env_corosync.py \
			  tier0/lib/test_node_communication_format.py \
			  tier0/lib/communication/test_qdevice.py \
			  tier0/lib/communication/test_booth.py \
			  tier0/lib/communication/test_nodes.py \
			  tier0/lib/communication/test_cluster.py \
			  tier0/lib/communication/test_status.py \
			  tier0/lib/communication/test_sbd.py \
			  tier0/lib/communication/test_corosync.py \
			  tier0/lib/communication/__init__.py \
			  tier0/lib/communication/test_qdevice_net.py \
			  tier0/lib/test_env.py \
			  tier0/lib/commands/test_qdevice.py \
			  tier0/lib/commands/test_quorum.py \
			  tier0/lib/commands/test_resource_agent.py \
			  tier0/lib/commands/test_ticket.py \
			  tier0/lib/commands/test_fencing_topology.py \
			  tier0/lib/commands/test_stonith.py \
			  tier0/lib/commands/test_pcsd.py \
			  tier0/lib/commands/test_stonith_agent.py \
			  tier0/lib/commands/test_acl.py \
			  tier0/lib/commands/tag/test_tag_create.py \
			  tier0/lib/commands/tag/tag_common.py \
			  tier0/lib/commands/tag/test_tag_config.py \
			  tier0/lib/commands/tag/test_tag_remove.py \
			  tier0/lib/commands/tag/test_tag_update.py \
			  tier0/lib/commands/tag/__init__.py \
			  tier0/lib/commands/resource/test_resource_enable_disable.py \
			  tier0/lib/commands/resource/test_group_add.py \
			  tier0/lib/commands/resource/test_failcounts.py \
			  tier0/lib/commands/resource/test_resource_relations.py \
			  tier0/lib/commands/resource/test_bundle_reset.py \
			  tier0/lib/commands/resource/test_resource_manage_unmanage.py \
			  tier0/lib/commands/resource/test_bundle_update.py \
			  tier0/lib/commands/resource/bundle_common.py \
			  tier0/lib/commands/resource/test_bundle_create.py \
			  tier0/lib/commands/resource/test_resource_create.py \
			  tier0/lib/commands/resource/__init__.py \
			  tier0/lib/commands/resource/test_resource_move_ban.py \
			  tier0/lib/commands/test_status.py \
			  tier0/lib/commands/dr/test_destroy.py \
			  tier0/lib/commands/dr/test_status.py \
			  tier0/lib/commands/dr/test_get_config.py \
			  tier0/lib/commands/dr/test_set_recovery_site.py \
			  tier0/lib/commands/dr/__init__.py \
			  tier0/lib/commands/test_node.py \
			  tier0/lib/commands/sbd/test_get_cluster_sbd_status.py \
			  tier0/lib/commands/sbd/test_disable_sbd.py \
			  tier0/lib/commands/sbd/test_enable_sbd.py \
			  tier0/lib/commands/sbd/test_get_cluster_sbd_config.py \
			  tier0/lib/commands/sbd/__init__.py \
			  tier0/lib/commands/sbd/test_watchdog_list.py \
			  tier0/lib/commands/test_sbd.py \
			  tier0/lib/commands/test_alert.py \
			  tier0/lib/commands/remote_node/fixtures_add.py \
			  tier0/lib/commands/remote_node/test_node_remove_remote.py \
			  tier0/lib/commands/remote_node/test_node_add_remote.py \
			  tier0/lib/commands/remote_node/fixtures_remove.py \
			  tier0/lib/commands/remote_node/__init__.py \
			  tier0/lib/commands/remote_node/test_node_remove_guest.py \
			  tier0/lib/commands/remote_node/test_node_add_guest.py \
			  tier0/lib/commands/test_stonith_history.py \
			  tier0/lib/commands/test_cib_options.py \
			  tier0/lib/commands/cluster/test_add_link.py \
			  tier0/lib/commands/cluster/test_verify.py \
			  tier0/lib/commands/cluster/test_node_clear.py \
			  tier0/lib/commands/cluster/test_setup.py \
			  tier0/lib/commands/cluster/test_update_link.py \
			  tier0/lib/commands/cluster/test_add_nodes_validation.py \
			  tier0/lib/commands/cluster/test_remove_links.py \
			  tier0/lib/commands/cluster/test_remove_nodes_from_cib.py \
			  tier0/lib/commands/cluster/__init__.py \
			  tier0/lib/commands/__init__.py \
			  tier0/lib/commands/test_constraint_common.py \
			  tier0/lib/test_tools.py \
			  tier0/lib/test_stonith_agent.py \
			  tier0/lib/misc.py \
			  tier0/lib/cib/test_constraint_colocation.py \
			  tier0/lib/cib/test_resource_remote_node.py \
			  tier0/lib/cib/test_sections.py \
			  tier0/lib/cib/test_resource_clone.py \
			  tier0/lib/cib/test_resource_common.py \
			  tier0/lib/cib/test_resource_guest_node.py \
			  tier0/lib/cib/test_fencing_topology.py \
			  tier0/lib/cib/test_stonith.py \
			  tier0/lib/cib/test_tools.py \
			  tier0/lib/cib/test_nvpair.py \
			  tier0/lib/cib/test_resource_operations.py \
			  tier0/lib/cib/test_acl.py \
			  tier0/lib/cib/test_resource_primitive.py \
			  tier0/lib/cib/test_tag.py \
			  tier0/lib/cib/test_resource_group.py \
			  tier0/lib/cib/test_constraint_ticket.py \
			  tier0/lib/cib/resource/test_hierarchy.py \
			  tier0/lib/cib/resource/test_relations.py \
			  tier0/lib/cib/resource/__init__.py \
			  tier0/lib/cib/test_status.py \
			  tier0/lib/cib/rule/test_cib_to_dto.py \
			  tier0/lib/cib/rule/test_tools.py \
			  tier0/lib/cib/rule/test_validator.py \
			  tier0/lib/cib/rule/test_cib_to_str.py \
			  tier0/lib/cib/rule/test_parsed_to_cib.py \
			  tier0/lib/cib/rule/test_parser.py \
			  tier0/lib/cib/rule/__init__.py \
			  tier0/lib/cib/test_node.py \
			  tier0/lib/cib/test_alert.py \
			  tier0/lib/cib/test_constraint.py \
			  tier0/lib/cib/test_resource_set.py \
			  tier0/lib/cib/test_resource_bundle.py \
			  tier0/lib/cib/__init__.py \
			  tier0/lib/cib/test_constraint_order.py \
			  tier0/lib/cib/test_nvpair_multi.py \
			  tier0/lib/test_xml_tools.py \
			  tier0/lib/dr/test_facade.py \
			  tier0/lib/dr/__init__.py \
			  tier0/lib/test_sbd.py \
			  tier0/lib/file/test_raw_file.py \
			  tier0/lib/file/test_toolbox.py \
			  tier0/lib/file/test_instance.py \
			  tier0/lib/test_validate.py \
			  tier0/lib/corosync/test_config_facade_links.py \
			  tier0/lib/corosync/test_config_facade_nodes.py \
			  tier0/lib/corosync/test_config_facade_misc.py \
			  tier0/lib/corosync/test_config_facade_quorum_device.py \
			  tier0/lib/corosync/test_config_validators_quorum.py \
			  tier0/lib/corosync/test_config_facade_quorum.py \
			  tier0/lib/corosync/test_config_validators_links.py \
			  tier0/lib/corosync/test_node.py \
			  tier0/lib/corosync/test_config_validators_create.py \
			  tier0/lib/corosync/test_config_validators_nodes.py \
			  tier0/lib/corosync/__init__.py \
			  tier0/lib/test_env_cib.py \
			  tier0/lib/test_node_communication.py \
			  tier0/lib/pacemaker/test_simulate.py \
			  tier0/lib/pacemaker/test_state.py \
			  tier0/lib/pacemaker/test_values.py \
			  tier0/lib/pacemaker/__init__.py \
			  tier0/lib/__init__.py \
			  tier0/lib/booth/test_env.py \
			  tier0/lib/booth/test_config_parser.py \
			  tier0/lib/booth/test_config_facade.py \
			  tier0/lib/booth/test_config_validators.py \
			  tier0/lib/booth/test_status.py \
			  tier0/lib/booth/test_resource.py \
			  tier0/lib/booth/test_sync.py \
			  tier0/lib/booth/__init__.py \
			  tier0/__init__.py \
			  tier0/cli/test_booth.py \
			  tier0/cli/common/test_middleware.py \
			  tier0/cli/common/test_capabilities.py \
			  tier0/cli/common/test_printable_tree.py \
			  tier0/cli/common/test_lib_wrapper.py \
			  tier0/cli/common/__init__.py \
			  tier0/cli/common/test_completion.py \
			  tier0/cli/common/test_parse_args.py \
			  tier0/cli/test_stonith.py \
			  tier0/cli/constraint/__init__.py \
			  tier0/cli/constraint/test_command.py \
			  tier0/cli/constraint/test_parse_args.py \
			  tier0/cli/test_dr.py \
			  tier0/cli/test_cluster.py \
			  tier0/cli/tag/__init__.py \
			  tier0/cli/tag/test_command.py \
			  tier0/cli/reports/test_messages.py \
			  tier0/cli/reports/__init__.py \
			  tier0/cli/constraint_ticket/__init__.py \
			  tier0/cli/constraint_ticket/test_command.py \
			  tier0/cli/constraint_ticket/test_parse_args.py \
			  tier0/cli/test_nvset.py \
			  tier0/cli/resource/test_relations.py \
			  tier0/cli/resource/test_defaults.py \
			  tier0/cli/resource/__init__.py \
			  tier0/cli/resource/test_parse_args.py \
			  tier0/cli/test_resource.py \
			  tier0/cli/cluster/__init__.py \
			  tier0/cli/cluster/test_command.py \
			  tier0/cli/__init__.py \
			  tier0/cli/test_rule.py \
			  tier0/cli/booth/test_env.py \
			  tier0/cli/booth/__init__.py \
			  curl_test.py \
			  tier1/test_misc.py \
			  tier1/test_quorum.py \
			  tier1/test_tag.py \
			  tier1/test_status.py \
			  tier1/legacy/test_stonith.py \
			  tier1/legacy/test_acl.py \
			  tier1/legacy/test_utils.py \
			  tier1/legacy/test_cluster.py \
			  tier1/legacy/test_node.py \
			  tier1/legacy/test_resource.py \
			  tier1/legacy/test_alert.py \
			  tier1/legacy/test_properties.py \
			  tier1/legacy/__init__.py \
			  tier1/legacy/test_constraints.py \
			  tier1/legacy/test_rule.py \
			  tier1/test_cluster_pcmk_remote.py \
			  tier1/test_cib_options.py \
			  tier1/cluster/test_cib_push.py \
			  tier1/cluster/__init__.py \
			  tier1/cib_resource/test_clone_unclone.py \
			  tier1/cib_resource/stonith_common.py \
			  tier1/cib_resource/test_create.py \
			  tier1/cib_resource/test_bundle.py \
			  tier1/cib_resource/test_manage_unmanage.py \
			  tier1/cib_resource/test_operation_add.py \
			  tier1/cib_resource/common.py \
			  tier1/cib_resource/test_stonith_create.py \
			  tier1/cib_resource/test_group_ungroup.py \
			  tier1/cib_resource/test_stonith_enable_disable.py \
			  tier1/cib_resource/test_enable_disable.py \
			  tier1/cib_resource/__init__.py \
			  tier1/__init__.py \
			  tools/command_env/config_runner_cib.py \
			  tools/command_env/config_runner_systemctl.py \
			  tools/command_env/config_raw_file.py \
			  tools/command_env/config_runner_booth.py \
			  tools/command_env/config_runner.py \
			  tools/command_env/config_http_status.py \
			  tools/command_env/mock_node_communicator.py \
			  tools/command_env/config_http_pcmk.py \
			  tools/command_env/config_http.py \
			  tools/command_env/config_corosync_conf.py \
			  tools/command_env/mock_runner.py \
			  tools/command_env/config_http_sbd.py \
			  tools/command_env/config_http_booth.py \
			  tools/command_env/config_fs.py \
			  tools/command_env/config_runner_pcmk.py \
			  tools/command_env/config.py \
			  tools/command_env/mock_push_corosync_conf.py \
			  tools/command_env/mock_raw_file.py \
			  tools/command_env/mock_get_local_corosync_conf.py \
			  tools/command_env/config_runner_sbd.py \
			  tools/command_env/config_http_host.py \
			  tools/command_env/config_http_corosync.py \
			  tools/command_env/config_env.py \
			  tools/command_env/config_http_files.py \
			  tools/command_env/calls.py \
			  tools/command_env/spy.py \
			  tools/command_env/config_runner_corosync.py \
			  tools/command_env/mock_push_cib.py \
			  tools/command_env/tools.py \
			  tools/command_env/assistant.py \
			  tools/command_env/mock_fs.py \
			  tools/command_env/__init__.py \
			  tools/assertions.py \
			  tools/integration_lib.py \
			  tools/color_text_runner/writer.py \
			  tools/color_text_runner/result.py \
			  tools/color_text_runner/__init__.py \
			  tools/color_text_runner/format.py \
			  tools/custom_mock.py \
			  tools/misc.py \
			  tools/cib.py \
			  tools/case_analysis.py \
			  tools/fixture.py \
			  tools/xml.py \
			  tools/fixture_cib.py \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:heartbeat\:Dummy_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:heartbeat\:Dummy_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:pacemaker\:Stateful_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/list_ocf_providers \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:pacemaker\:remote_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:pacemaker\:SystemHealth_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/list_agents_stonith \
			  tools/bin_mock/pcmk/crm_resource.d/stonith\:fence_apc_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/list_standards \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:heartbeat\:IPaddr2_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/stonith\:fence_xvm_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/lsb\:network_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/systemd\:test@a\:b_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/stonith\:fence_scsi_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/stonith\:fence_ilo_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/list_agents_ocf\:pacemaker \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:pacemaker\:HealthCPU_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:heartbeat\:Filesystem_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/ocf\:pacemaker\:Dummy_metadata.xml \
			  tools/bin_mock/pcmk/crm_resource.d/list_agents_ocf\:heartbeat \
			  tools/bin_mock/__init__.py \
			  tools/__init__.py \
			  tools/pcs_runner.py \
			  tools/check/test_misc.py \
			  tools/check/__init__.py \
			  resources/corosync-3nodes-qdevice.conf \
			  resources/crm_mon.minimal.xml \
			  resources/capabilities.xml \
			  resources/transitions02.xml \
			  resources/cib-empty-3.4.xml \
			  resources/resource_agent_ocf_pacemaker_booth-site.xml \
			  resources/cluster.conf \
			  resources/cib-empty-3.5.xml \
			  resources/corosync-some-node-names.conf \
			  resources/corosync-3nodes-qdevice-heuristics.conf \
			  resources/resource_agent_ocf_heartbeat_dummy_utf8.xml \
			  resources/stonith_agent_fence_unfencing.xml \
			  resources/cib-large.xml \
			  resources/cib-empty-withnodes.xml \
			  resources/cib-empty-3.3.xml \
			  resources/crm_mon_rng/fence-event-2.0.rng \
			  resources/crm_mon_rng/crm_mon-2.3.rng \
			  resources/crm_mon_rng/crm_mon.rng \
			  resources/resource_agent_ocf_pacemaker_remote.xml \
			  resources/corosync-no-node-names.conf \
			  resources/corosync.conf \
			  resources/cib-empty-2.3-withnodes.xml \
			  resources/cib-empty-1.2.xml \
			  resources/cib-largefile.xml \
			  resources/cib-empty-with3nodes.xml \
			  resources/cib-empty-3.2.xml \
			  resources/qdevice-certs/qdevice-cert-request.crq \
			  resources/qdevice-certs/qnetd-cacert.crt \
			  resources/qdevice-certs/signed-certificate.crt \
			  resources/qdevice-certs/final-certificate.pk12 \
			  resources/resource_agent_ocf_heartbeat_dummy_insane_action.xml \
			  resources/cib-empty-2.8.xml \
			  resources/cib-empty-2.9.xml \
			  resources/fenced_metadata.xml \
			  resources/cib-empty.xml \
			  resources/corosync-qdevice.conf \
			  resources/stonith_agent_fence_simple.xml \
			  resources/stonith_agent_fence_custom_actions.xml \
			  resources/resource_agent_ocf_heartbeat_dummy.xml \
			  resources/corosync-3nodes.conf \
			  resources/cib-empty-2.6.xml \
			  resources/resource_agent_ocf_heartbeat_ipaddr2.xml \
			  resources/cib-empty-2.5.xml \
			  resources/cib-empty-2.0.xml \
			  resources/cib-tags.xml \
			  resources/cib-empty-2.5-withnodes.xml \
			  resources/cib-empty-3.1.xml \
			  resources/transitions01.xml \
			  __init__.py
